# GOT_Counter

./: .gitignore  Got_Counter.py  LICENSE  Makefile  README.md  components.json  config.json.example  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  react-router.config.ts  tsconfig.json  vite.config.ts
app/: counter.py  interface.py  main.py  main_old.py
assets/: shows.db
tools/: update_anime.py
tools/general/: subprocess.py  vite.py
tools/interface/: __init__.py  converter.py  exposable.py
web/: app.css  root.tsx
web/routes/: home.tsx
