[project]
name = "animepoll"
version = "0.1.0"
description = ""
authors = [
    {name = "Ebrahim Tahernejad",email = "ebrahimtahernejad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "twitchapi (>=4.4.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
nuitka = "^2.7.2"
imageio = "^2.37.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
